# prepdata

./: app.py  main.py  pyproject.toml
analysis/: EDA.ipynb  analysis.md
analysis/analysis_setup/: __init__.py  basic_data_inspection.py  bivariate_analysis.py  missing_values_analysis.py  multivariate_analysis.py
core/: interfaces.py  registry.py
data/: cleaned_data.csv  no_missing_values_data.csv  no_outliers_data.csv
data/test/: X_test_data.csv  y_test_target.csv
data/train/: X_train_data.csv  y_train_target.csv
postprocessing/: model_building.py  model_evaluator.py  predict.py
preprocessing/: __init__.py  data_splitter.py  duplicate_handler.py  feature_engineering.py  handle_missing_values.py  outlier_detection.py
