[project]
name = "prepdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "mlflow-skinny>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
    "zenml>=0.91.1",
]
